--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -73,7 +73,8 @@ jobs:
           p12-password: ${{ secrets.IOS_CERTIFICATES_PASSWORD }}
       - uses: OlivierLDff/download-provisioning-profiles@v1
         with:
-          bundle-id: com.mahoutech.blume
+          bundle-id: 'com.mahoutech.blume'
+          profile-type: 'Development'
           issuer-id: ${{ secrets.IOS_APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.IOS_APPSTORE_KEY_ID }}
           api-private-key: ${{ secrets.IOS_APPSTORE_PRIVATE_KEY }}
@@ -95,7 +96,7 @@ jobs:
       # - name: 🔨 Build Blume
       #   run: cmake --build build --target Blume --config "${{ matrix.build-type }}"
       - name: 🔨 Build Blume Archive
-        run: cmake --build build --target BlumeArchive --config "${{ matrix.build-type }}"
+        run: xcodebuild -project Blume.xcodeproj build -target BlumeArchive PROVISiONING_PROFILE="076bf1f8-d34e-4d49-a4ed-4b3bf1e49cb4" #cmake --build build --target BlumeArchive --config "${{ matrix.build-type }}"
       # - name: 🚀 Deploy Blume Ipa
       #   run: cmake --build build --target BlumeIpa --config "${{ matrix.build-type }}"
       # - name: 📦 Upload Blume App
