--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -28,10 +28,10 @@ jobs:
         build-system: ["1"]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: ⬆ Install toolchain
         with:
           repository: OlivierLDff/IosCMakeToolchain
@@ -67,10 +67,10 @@ jobs:
           tools: 'tools_cmake'
           modules: "qtshadertools"
 
-      - uses: OlivierLDff/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.IOS_CERTIFICATES_FILE_BASE64 }}
-          p12-password: ${{ secrets.IOS_CERTIFICATES_PASSWORD }}
+      # - uses: OlivierLDff/import-codesign-certs@v1
+      #   with:
+      #     p12-file-base64: ${{ secrets.IOS_CERTIFICATES_FILE_BASE64 }}
+      #     p12-password: ${{ secrets.IOS_CERTIFICATES_PASSWORD }}
       # - uses: OlivierLDff/download-provisioning-profiles@v1
       #   with:
       #     bundle-id: 'com.mahoutech.blume'
@@ -78,9 +78,49 @@ jobs:
       #     issuer-id: ${{ secrets.IOS_APPSTORE_ISSUER_ID }}
       #     api-key-id: ${{ secrets.IOS_APPSTORE_KEY_ID }}
       #     api-private-key: ${{ secrets.IOS_APPSTORE_PRIVATE_KEY }}
-      - uses: nickwph/apple-provisioning-profile-action@v1
-        with:
-          profile-base64: ${{ secrets.PROFILE_BASE64 }}
+      # - uses: nickwph/apple-provisioning-profile-action@v1
+      #   with:
+      #     profile-base64: ${{ secrets.PROFILE_BASE64 }}
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATES_FILE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.IOS_CERTIFICATES_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
+          BUILD_PROVISION_PROFILE_BASE64_2: ${{ secrets.PROVISIONING_PROFILE_BASE64_2 }}
+          BUILD_PROVISION_PROFILE_BASE64_3: ${{ secrets.PROVISIONING_PROFILE_BASE64_3 }}
+          BUILD_PROVISION_PROFILE_BASE64_4: ${{ secrets.PROVISIONING_PROFILE_BASE64_4 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          PP_PATH_2=$RUNNER_TEMP/build_pp_2.mobileprovision
+          PP_PATH_3=$RUNNER_TEMP/build_pp_3.mobileprovision
+          PP_PATH_4=$RUNNER_TEMP/build_pp_4.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64_2" | base64 --decode -o $PP_PATH_2
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64_3" | base64 --decode -o $PP_PATH_3
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64_3" | base64 --decode -o $PP_PATH_3
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH_2 ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH_3 ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH_4 ~/Library/MobileDevice/Provisioning\ Profiles
       - name: 🔧 Configure
         run: |
           mkdir -p build 
