--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -81,6 +81,10 @@ jobs:
       # - uses: nickwph/apple-provisioning-profile-action@v1
       #   with:
       #     profile-base64: ${{ secrets.PROFILE_BASE64 }}
+      - name: Authenticate with Apple API Key 
+        run: |
+          APPLE_API_KEY=${{ secrets.APPLE_API_KEY }}
+          xcode-select --print-path > /tmp/xcode_path && echo $APPLE_API_KEY | base64 --decode > /tmp/AuthKey_$APPLE_ID.p8 && sudo security import /tmp/AuthKey_$APPLE_ID.p8 -k ~/Library/Keychains/login.keychain -P "$APPLE_API_KEY" && security set-key-partition-list -S apple-tool:,apple: -k "" ~/Library/Keychains/login.keychain
       - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATES_FILE_BASE64 }}
