--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -43,12 +43,6 @@ jobs:
           path: ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}
           key: ${{ runner.os }}-QtCache-${{ matrix.qt-version }}-ios
 
-      - name: Authenticate with Apple API Key 
-        run: |
-          APPLE_API_KEY=${{ secrets.APPLE_API_KEY }}
-          APPLE_ID=${{ secrets.APPLE_ID }}
-          xcode-select --print-path > /tmp/xcode_path && echo $APPLE_API_KEY | base64 --decode > /tmp/AuthKey_$APPLE_ID.p8 && sudo security import /tmp/AuthKey_$APPLE_ID.p8 -k ~/Library/Keychains/login.keychain -P "$APPLE_API_KEY" && security set-key-partition-list -S apple-tool:,apple: -k "" ~/Library/Keychains/login.keychain
-      
       - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATES_FILE_BASE64 }}
@@ -58,6 +52,8 @@ jobs:
           BUILD_PROVISION_PROFILE_BASE64_3: ${{ secrets.PROVISIONING_PROFILE_BASE64_3 }}
           BUILD_PROVISION_PROFILE_BASE64_4: ${{ secrets.PROVISIONING_PROFILE_BASE64_4 }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
+          APPLE_ID: ${{ secrets.APPLE_ID }} 
         run: |
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
@@ -78,6 +74,11 @@ jobs:
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          echo $APPLE_API_KEY | base64 --decode > /tmp/api_key.p8
+          #xcode-select --print-path > /tmp/xcode_path && echo $APPLE_API_KEY | base64 --decode > /tmp/AuthKey_$APPLE_ID.p8 && 
+          sudo security import /tmp/api_key.p8 -k ~/Library/Keychains/login.keychain -P "$APPLE_API_KEY" && security set-key-partition-list -S apple-tool:,apple: -k "" ~/Library/Keychains/login.keychain
+          xcode-select --print-path
 
           # import certificate to keychain
           security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
