--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -90,6 +90,8 @@ jobs:
           # cp $PP_PATH_2 ~/Library/MobileDevice/Provisioning\ Profiles
           # cp $PP_PATH_3 ~/Library/MobileDevice/Provisioning\ Profiles
           # cp $PP_PATH_4 ~/Library/MobileDevice/Provisioning\ Profiles
+          xcode-select -p -i com.mahoutech.blume
+          xcode-select -p -s $CERTIFICATE_PATH
           ls ~/Library/MobileDevice/Provisioning\ Profiles
 
       - uses: OlivierLDff/import-codesign-certs@v1
@@ -144,7 +146,7 @@ jobs:
             -DENABLE_VISIBILITY=FALSE \
             -DENABLE_BITCODE=${{ matrix.bitcode }} \
             -DENABLE_ARC=TRUE \
-            -DQT_IOS_CODE_SIGN_IDENTITY=${{ secrets.IOS_CODE_SIGN_IDENTITY }} \
+            -DQT_IOS_CODE_SIGN_IDENTITY="${{ secrets.IOS_CODE_SIGN_IDENTITY }}" \
             -DQT_IOS_PROVISIONING_PROFILE_SPECIFIER=${{ secrets.IOS_PROVISIONING_PROFILE_SPECIFIER }} \
             -DQT_HOST_PATH=${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/${{ matrix.qt-version }}/macos \
             -DCMAKE_PREFIX_PATH=${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/${{ matrix.qt-version }}/ios \
