--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -90,8 +90,7 @@ jobs:
           # cp $PP_PATH_2 ~/Library/MobileDevice/Provisioning\ Profiles
           # cp $PP_PATH_3 ~/Library/MobileDevice/Provisioning\ Profiles
           # cp $PP_PATH_4 ~/Library/MobileDevice/Provisioning\ Profiles
-          xcode-select -p -i com.mahoutech.blume
-          xcode-select -p -s $CERTIFICATE_PATH
+
           ls ~/Library/MobileDevice/Provisioning\ Profiles
 
       - uses: OlivierLDff/import-codesign-certs@v1
@@ -157,7 +156,7 @@ jobs:
       #   run: cmake --build build --target Blume --config "${{ matrix.build-type }}"
       - name: 🔨 Build Blume Archive
         run: |
-          cmake --build build --target BlumeArchive --config "${{ matrix.build-type }}"
+          cmake --build build --target BlumeArchive --config "${{ matrix.build-type }}" -- PROVISIONING_PROFILE="com.mahoutech.blume"
       # - name: 🚀 Deploy Blume Ipa
       #   run: cmake --build build --target BlumeIpa --config "${{ matrix.build-type }}"
       # - name: 📦 Upload Blume App
