--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -31,17 +31,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: actions/checkout@v4
-        name: ⬆ Install toolchain
-        with:
-          repository: leetal/ios-cmake
-          path: ios-toolchain
-      - name: Cache Qt
-        id: cache-qt-ios
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}
-          key: ${{ runner.os }}-QtCache-${{ matrix.qt-version }}-ios
+      # - uses: actions/checkout@v4
+      #   name: ⬆ Install toolchain
+      #   with:
+      #     repository: leetal/ios-cmake
+      #     path: ios-toolchain
+      # - name: Cache Qt
+      #   id: cache-qt-ios
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}
+      #     key: ${{ runner.os }}-QtCache-${{ matrix.qt-version }}-ios
 
       - name: Install the Apple certificate and provisioning profile
         env:
@@ -138,7 +138,7 @@ jobs:
           ${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/Tools/CMake/CMake.app/Contents/bin/cmake \
             -G "Xcode" \
             -Tbuildsystem=${{ matrix.build-system }} \
-            -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/ios-toolchain/ios.toolchain.cmake \
+            -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/Qt-${{ runner.os }}-${{ matrix.qt-version }}/Qt/${{ matrix.qt-version }}/ios/lib/cmake/Qt6/qt.toolchain.cmake \
             -DCMAKE_CONFIGURATION_TYPES="Release" \
             -DDEPLOYMENT_TARGET=${{ matrix.deployment-target }} \
             -DPLATFORM=${{ matrix.platform }} \
