--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   BuildIpa:
-    runs-on: macOS-latest
+    runs-on: macos-12
     strategy:
       matrix:
         deployment-target: ["14.0"]
