--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -15,10 +15,10 @@ on:
 
 jobs:
   BuildIpa:
-    runs-on: macos-latest
+    runs-on: macOS-latest
     strategy:
       matrix:
-        deployment-target: ["13.0"]
+        deployment-target: ["14.0"]
         platform: ["OS64"]
         qt-version: ["6.4.3"]
         build-type: ["Release"]
