--- a/.github/workflows/ios-ipa.yml
+++ b/.github/workflows/ios-ipa.yml
@@ -92,6 +92,8 @@ jobs:
           # cp $PP_PATH_4 ~/Library/MobileDevice/Provisioning\ Profiles
 
           ls ~/Library/MobileDevice/Provisioning\ Profiles
+          /Users/runner/hostedtoolcache/Python/3.11.6/x64/bin/python3 -m pip install aqtinstall==3.1.*
+          /Users/runner/hostedtoolcache/Python/3.11.6/x64/bin/python3 -m aqt install-qt mac ios 6.4.3 --outputdir /Users/runner/work/Blume/Blume/Qt-macOS-6.4.3/Qt --modules qtconnectivity qtimageformats qtmultimedia qtnetworkauth qtpositioning qtsensors qtvirtualkeyboard qtwebsockets qtwebview qt5compat qtcharts qtshadertools
 
       - uses: OlivierLDff/import-codesign-certs@v1
         with:
